# Cpp-Tanaj84dk-Tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake
include/Tanja84dk/Tools/: Tools.h
include/Tanja84dk/tools/: tools.h
include/Tools/: Tools.h
src/: Tools.cpp  tools.cpp
test/: CMakeLists.txt
test/src/: ToolsTests.cpp  tanja84dk_tools_test.cpp
